test/fail/mismatched-operators.grace
def name = object {
    method <(rhs) { self }
    method >(rhs) { self }
}

name > name < name

